# haskell-practice

haskell-practice.hsproj/: .uuid
haskell-practice.hsproj/practice/: haskell-algorithms.cabal  practice.cabal
haskell-practice.hsproj/practice/Leetcode/: Fast_Nqueens.hs  Nqueens.hs  _Fast_Nqueens.hsplay  _Nqueens.hsplay
